<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_badge"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always"
        android:title="@string/action_notification"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_recent"
        android:orderInCategory="101"
        android:title="@string/action_show_recent"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="102"
        android:title="@string/action_top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
