<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.startup.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/login_uni_img"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_7"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_7"/>

                </android.support.design.widget.TextInputLayout>

                <dev.studentapp.view.component.button.ButtonOpenSansBold
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/font_size_6"/>

                <dev.studentapp.view.component.button.ButtonOpenSansSemiBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_do_not_have_account"
                    android:textSize="@dimen/font_size_5"
                    android:textColor="@color/text_black"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:onClick="openRegistration"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_gray"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <dev.studentapp.view.component.button.ButtonOpenSansSemiBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_forgot_password"
                    android:textSize="@dimen/font_size_5"
                    android:textColor="@color/text_black"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:onClick="openForgotPassword"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
