<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="dev.studentapp.view.startup.registration.RegistrationActivity">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                            android:id="@+id/edtFirstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_hint_firstname"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/font_size_7"
                            android:textColor="@color/text_black"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                            android:id="@+id/edtLastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_hint_lastname"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/font_size_7"
                            android:textColor="@color/text_black"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_7"
                        android:textColor="@color/text_black"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_7"
                        android:textColor="@color/text_black"/>

                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/edtConfrimPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_hint_confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_7"
                        android:textColor="@color/text_black"/>

                </android.support.design.widget.TextInputLayout>-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_hint_phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/font_size_7"
                        android:maxLength="10"
                        android:textColor="@color/text_black"/>

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <RadioButton
                        android:id="@+id/rdtStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_hint_student"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textSize="@dimen/font_size_7"
                        android:textColor="@color/text_black"/>

                    <RadioButton
                        android:id="@+id/rdtMentor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_hint_mentor"
                        android:textSize="@dimen/font_size_7"
                        android:textColor="@color/text_black"/>

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                        android:id="@+id/edtPlatform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_hint_use_platform"
                        android:maxLines="3"
                        android:textSize="@dimen/font_size_7"
                        android:textColor="@color/text_black"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <dev.studentapp.view.component.button.ButtonOpenSansBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up_short"
                android:textSize="@dimen/font_size_6"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:onClick="doRegistration"
                android:layout_gravity="center_horizontal"/>

            <dev.studentapp.view.component.button.ButtonOpenSansSemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_i_already_have_account"
                android:textSize="@dimen/font_size_5"
                android:textColor="@color/text_black"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:onClick="openLogin"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>

