<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dev.studentapp.view.userprofile.ChangePasswordActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_7"
                    android:enabled="false"
                    android:textColor="@color/text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                    android:id="@+id/edtOldPaswword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_7"
                    android:textColor="@color/text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                    android:id="@+id/edtNewPaswword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_7"
                    android:textColor="@color/text_black"/>

            </android.support.design.widget.TextInputLayout>

            <dev.studentapp.view.component.button.ButtonOpenSansSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Password"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_gravity="center"
                android:textSize="@dimen/font_size_6"
                android:layout_marginTop="24dp"
                android:onClick="onChangePassword"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>


