<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.feeds.addfeed.AddFeedActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/user_image_size"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <!--<com.makeramen.roundedimageview.RoundedImageView-->
                        <!--android:layout_width="@dimen/user_image_size"-->
                        <!--android:layout_height="@dimen/user_image_size"-->
                        <!--android:src="@drawable/profile_user"-->
                        <!--android:background="@android:color/transparent"-->
                        <!--app:riv_oval="true"-->
                        <!--android:layout_marginTop="8dp"/>-->

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">
                        <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine|textCapSentences"
                            android:hint="@string/txt_hint_add_feed_text"
                            android:drawableLeft="@drawable/ic_message_black_24dp"
                            android:drawablePadding="10dp"
                            android:textSize="@dimen/font_size_6"
                            android:textColor="@color/text_black"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">
                        <dev.studentapp.view.component.edittext.EditTextOpenSansRegular
                            android:id="@+id/edtShareLink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:hint="@string/txt_hint_feed_link"
                            android:drawableLeft="@drawable/ic_link_black_24dp"
                            android:drawablePadding="10dp"
                            android:textSize="@dimen/font_size_6"
                            android:textColor="@color/text_black"/>
                    </android.support.design.widget.TextInputLayout>

                    <dev.studentapp.view.component.button.ButtonOpenSansRegular
                        android:id="@+id/btnGallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/txt_hint_feed_photos"
                        android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
                        android:drawablePadding="8dp"
                        android:textSize="@dimen/font_size_6"
                        android:textColor="@color/text_black"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"
                        android:gravity="left|center_vertical"
                        android:onClick="openGallery"
                        android:textAllCaps="false"/>
                    
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_black"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="-8dp"/>

                </LinearLayout>

                <include layout="@layout/contain_add_feeds" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
